MySQL migration - removed PostgreSQL package

--- a/.env.production
+++ b/.env.production
@@ -1,15 +1,73 @@
+# Application
 APP_NAME=solidtime
 APP_VERSION=0.0.0
 APP_BUILD=0
 VITE_APP_NAME=solidtime
 APP_ENV=production
 APP_DEBUG=false
+APP_URL=https://tracker.samtaresearch.com
 APP_FORCE_HTTPS=true
-OCTANE_SERVER=frankenphp
+APP_KEY=
+APP_ENABLE_REGISTRATION=true
+SUPER_ADMINS=admin@samtaresearch.com
 PAGINATION_PER_PAGE_DEFAULT=500
 
+# Logging
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
+# Database - MySQL Configuration for Hostinger
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=samtadatabase
+DB_USERNAME=samtaresearcha
+DB_PASSWORD=InnovativeV@5864#(SRA)
+DB_TEST_HOST=localhost
+DB_TEST_PORT=3306
+DB_TEST_DATABASE=samtadatabase_test
+DB_TEST_USERNAME=samtaresearcha
+DB_TEST_PASSWORD=InnovativeV@5864#(SRA)
+
+# Broadcasting
+BROADCAST_DRIVER=null
+
+# Cache
+CACHE_DRIVER=file
+
+# Queue
+QUEUE_CONNECTION=sync
+
+# Session
+SESSION_DRIVER=database
+SESSION_LIFETIME=120
+
+# Mail - UPDATE WITH HOSTINGER SMTP
+MAIL_MAILER=smtp
+MAIL_HOST=mail.samtaresearch.com
+MAIL_PORT=465
+MAIL_USERNAME=noreply@samtaresearch.com
+MAIL_PASSWORD=your_mail_password
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS="noreply@samtaresearch.com"
+MAIL_FROM_NAME="Solidtime"
+MAIL_REPLY_TO_ADDRESS="support@samtaresearch.com"
+MAIL_REPLY_TO_NAME="Solidtime Support"
+
+# Filesystems - Use local storage
+FILESYSTEM_DISK=local
+PUBLIC_FILESYSTEM_DISK=local
+
+# Passport
+PASSPORT_PERSONAL_ACCESS_CLIENT_ID="9e27f54d-5dfb-4dde-99d7-834518236c92"
+PASSPORT_PERSONAL_ACCESS_CLIENT_SECRET="EL5mXp3aF8ITjcwoOXRpbSK7zGrWhW4zTDpQXTkf"
+
+# Auditing
+AUDITING_ENABLED=true
+
+# Telescope (disable in production for security)
+TELESCOPE_ENABLED=false
+
+# Services
+GOTENBERG_URL=http://localhost:3000
