--- a/.env.ci
+++ b/.env.ci
@@ -3,7 +3,7 @@ APP_NAME=solidtime
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://tracker.samtaresearch.com/
 APP_FORCE_HTTPS=false
 APP_ENABLE_REGISTRATION=true
 
