--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_NAME=solidtime
 APP_ENV=local
 APP_KEY=base64:UNQNf1SXeASNkWux01Rj8EnHYx8FO0kAxWNDwktclkk=
 APP_DEBUG=true
-APP_URL=https://solidtime.test
+APP_URL=https://tracker.samtaresearch.com/
 APP_FORCE_HTTPS=false
 APP_ENABLE_REGISTRATION=true
 SUPER_ADMINS=admin@example.com
